# standards

./: .gitignore  .pre-commit-config.yaml  .prettierrc.js  CNAME  Dockerfile.validate  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  setup.cfg  tasks.py
.github/workflows/: deploy.yaml  standards-validation.yaml
draft/DataProducts/: README.md
draft/DataProducts/AirQuality/: Current.html  Current.json
draft/DataProducts/Company/: BasicInfo.html  BasicInfo.json  Recommendation.html  Recommendation.json  RecommendationsScore.json  Shareholders.html  Shareholders.json
draft/DataProducts/Health/: Diagnoses.json
draft/DataProducts/Health/Diagnoses/: Diagnoses.html  Diagnoses.json
draft/DataProducts/LetterOfCredit/: ExportInstructions.html  ExportInstructions.json
draft/DataProducts/Product/: DimensionsAndWeights.html  DimensionsAndWeights.json
draft/DataProducts/Shipment/: ForwardersCargoReceipt.html  ForwardersCargoReceipt.json  InsuranceCertificate.html  InsuranceCertificate.json  PackingList.html  PackingList.json
draft/DataProducts/Transaction/: Invoice.html  Invoice.json
draft/DataProducts/Weather/Current/: Metric.html  Metric.json
src/: converter.py
src/draft/DataProducts/AirQuality/: Current.py
src/draft/DataProducts/Company/: BasicInfo.py  Recommendation.py  Shareholders.py
src/draft/DataProducts/Health/: Diagnoses.py
src/draft/DataProducts/LetterOfCredit/: ExportInstructions.py
src/draft/DataProducts/Product/: DimensionsAndWeights.py
utils/: requirements-validate.txt  standard.html.jinja2
(+5 files in other folders)
